# mini-split-engine

./: .env.example  .gitignore  Dockerfile  README.md  conftest.py  docker-compose.yml  entrypoint.sh  pyproject.toml
apps/audit/: models.py
apps/audit/migrations/: 0001_initial.py
apps/bbcs/: apps.py  models.py  serializers.py  tests.py  tests_payment_service.py  tests_views.py  urls.py  views.py
apps/bbcs/management/commands/: seed_bbcs.py
apps/bbcs/migrations/: 0001_initial.py
apps/bbcs/services/: payment_service.py  split_calculator.py
apps/core/: models.py  views.py
apps/core/handlers/: __init__.py  logger-engine.py  paginator.py
apps/core/management/commands/: seed.py
apps/payees/: apps.py  models.py  views.py
apps/payees/management/commands/: seed_payees.py
apps/payees/migrations/: 0001_initial.py
apps/users/: models.py
apps/users/migrations/: 0001_initial.py
bbcs/: apps.py
engine/: asgi.py  settings.py  urls.py  wsgi.py
templates/: rapidoc.html
