[project]
name = "mini-split-engine"
version = "0.1.0"
description = ""
authors = [
    {name = "Nilo Aires Jr.",email = "nilo_aires@hotmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "django (>=6.0.3,<7.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "djangorestframework (>=3.17.0,<4.0.0)",
    "markdown (>=3.10.2,<4.0.0)",
    "python-decouple (>=3.8,<4.0)",
    "django-filter (>=25.2,<26.0)",
    "ruff (>=0.15.7,<0.16.0)",
    "pytz (>=2026.1.post1,<2027.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
